[gd_scene load_steps=2 format=3 uid="uid://c8st4ijgnww6m"]

[ext_resource type="Script" path="res://sounds/sound_effects.gd" id="1_ubuu4"]

[node name="SoundEffects" type="Node"]
script = ExtResource("1_ubuu4")

[node name="SE" type="AudioStreamPlayer2D" parent="."]
bus = &"SoundEffects"

[node name="SEParallel1" type="AudioStreamPlayer2D" parent="."]
bus = &"SoundEffects"

[node name="SEParallel2" type="AudioStreamPlayer2D" parent="."]
bus = &"SoundEffects"

[node name="SEParallel3" type="AudioStreamPlayer2D" parent="."]
bus = &"SoundEffects"

[node name="SEParallel4" type="AudioStreamPlayer2D" parent="."]
bus = &"SoundEffects"

[node name="SEParallel5" type="AudioStreamPlayer2D" parent="."]
bus = &"SoundEffects"

[node name="SEParallel6" type="AudioStreamPlayer2D" parent="."]
bus = &"SoundEffects"
